components/devfile-sample-doke/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: foo
    appstudio.openshift.io/component: devfile-sample-doke
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eldevfile-sample-doke
  namespace: sbose-builds
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-devfile-sample-doke
    weight: null
status: {}
